cbaf 1.4.0 - 2018-10-30
-------------------------

New Features

- obtainOneStudy() and obtainMultipleStudies() functions can obtain data for
  groups of genes each possess more than 250 genes (Virtually unlimited gene
  number).





cbaf 1.2.0 - 2018-04-26
-------------------------

New Features

- heatmapOutput() can now determine the heatmap margines and column and row
  name sizes automatically.

- New image formats TIFF, JPG and BMP in addition to the previous PNG file
  format for heatmapOutput(). They can be chosen from processOneStudy() and
  processMultipleStudies or directly from heatmapOutput() function.

- heatmapOutput() now uses two methods for ranking the genes prior to generating
  heatmap(s). One of them is suited for finding genes that have unique high
  values in one or few cancer studies whereas the other method aids in
  detemining genes that possess high values in multiple / many cancers.

- If function argumnets are entered wrongly, more meaningful errors will appear.

- All functions are improved.





cbaf 1.0.0 - 2017-09-10
-------------------------

New Functions:

- New availableData() functon to scan all the cancer studies to examine presence
  of RNA-seq, microRNA-seq, microarray(mRNA), microarray(miRNA) and methylation
  data.

- New obtainOneStudy() function to obtain and store the supported data for at
  least one group of genes across multiple subgroups of a cancer study. In
  addion, it can check whether or not all genes are included in different
  subgroups of a cancer study and, if not, looks for the alternative gene names.

- New obtainMultipleStudies() function to obtain and store the supported data
  for at least one group of genes across multiple cancer studies. It can check
  whether or not all genes are included in each cancer study and, if not, it
  looks for the alternative gene names.

- New automatedStatistics() function to calculate the statistics of the data