@@ -30,7 +30,7 @@
 #'   RowCex = "auto", ColCex = "auto", heatmapMargines = "auto",
 #'   rowLabelsAngle = 0, columnLabelsAngle = 45, heatmapColor = "RdBu",
 #'   reverseColor = TRUE, transposedHeatmap = FALSE, simplifyBy = FALSE,
-#'   genesToDrop = FALSE)
+#'   genesToDrop = FALSE, transposeResults = FALSE)
 #'
 #'
 #'
@@ -158,6 +158,9 @@
 #' @param genesToDrop a character vector. Gene names within this vector will be
 #' omitted from heatmap.The default value is \code{FALSE}.
 #'
+#' @param transposeResults a logical value that enables the function to replace
+#' the columns and rows of data.
+#'
 #'
 #'
 #' @return a BiocFileCache object that containes some or all of the following
@@ -244,7 +247,9 @@ processOneStudy <- function(
 
   simplifyBy = FALSE,
 
-  genesToDrop = FALSE
+  genesToDrop = FALSE,
+
+  transposeResults = FALSE
 
   ){
 
@@ -353,7 +358,9 @@ processOneStudy <- function(
   ##############################################################################
   ### Preparing for excel output
 
-  xlsxOutput(submissionName = submissionName)
+  xlsxOutput(submissionName = submissionName,
+
+             transposeResults = transposeResults)
 
 
 
